<resources>
    <string name="app_name">caregiver</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="appname">Care Giver</string>
    <string name="menu_logout">Logout</string>
    <string name="frstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNo">Mobile Number</string>
    <string name="update">update</string>
    <string name="paymentAmount">Payment Amount</string>
</resources>